--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,19 @@ code {
 .selected {
     color:#1890ff !important;
 }
+
+button {
+    text-align: left !important;
+    overflow: hidden !important;
+}
+
+.ant-progress {
+    position:absolute;
+    left:1px;
+    margin-right:1px;
+    top:17px;
+}
+.ant-progress-line {
+    width: calc(100% - 2px) !important;
+    position:absolute !important;
+}
