--- a/src/index.css
+++ b/src/index.css
@@ -31,3 +31,11 @@ button {
     width: calc(100% - 2px) !important;
     position:absolute !important;
 }
+
+.fade-in-enter {
+    opacity:0;
+}
+.fade-in-enter-active {
+    opacity: 1;
+    transition: opacity 750ms;
+}
